# db-toolkit-electron

./: .env.example  .gitignore  CHANGELOG.md  CHANGES.md  DATABASE_MIGRATIONS.md  README.md  ai-integration.md  pyproject.toml
src/db-toolkit/: .env.example  __init__.py  main.py  package.json  pyproject.toml
src/db-toolkit/api/: routes.py
src/db-toolkit/connectors/: __init__.py
src/db-toolkit/core/: config.py  models.py  schemas.py  settings_storage.py  storage.py
src/db-toolkit/core/routes/: analytics.py  connections.py  csv.py  data.py  data_explorer.py  health.py  issues.py  schema.py  session.py  settings.py
src/db-toolkit/core/routes/ai/: query_ai.py  schema_ai.py
src/db-toolkit/core/schemas/: __init__.py  csv.py
src/db-toolkit/core/schemas/ai/: __init__.py
src/db-toolkit/electron/: ipc-handlers.js  main.js  menu.js  updater.js  window-manager.js
src/db-toolkit/electron/backend/connectors/: sqlite.js
src/db-toolkit/electron/backend/handlers/: ai.js  analytics.js  backup.js  connections.js  data-explorer.js  issues.js
src/db-toolkit/electron/backend/operations/: tasks.js  (+4 more)
src/db-toolkit/operations/: __init__.py  analytics_manager.py  background_tasks.py  backup_manager.py  connection_manager.py  csv_handler.py  data_editor.py  data_explorer.py  migrator_executor.py  query_executor.py  schema_explorer.py  session_manager.py
src/db-toolkit/operations/ai/: gemini_client.py  prompts.py  query_assistant.py  schema_analyzer.py
src/db-toolkit/operations/analytics/: mysql_analytics.py  pdf_export.py  postgresql_analytics.py  sqlite_analytics.py  table_stats.py
src/db-toolkit/src/: App.js
src/db-toolkit/src/data/: documentation.json
src/db-toolkit/src/hooks/: useAiAssistant.js  useAnalytics.js  useBackups.js  useConnections.js  useSchemaAI.js  useSettings.js  useWorkspaceIPC.js
src/db-toolkit/src/pages/: AnalyticsPage.js  BackupsPage.js  DataExplorerPage.js  QueryPage.js  SchemaPage.js
src/db-toolkit/src/services/: api.js  websocket.js
src/db-toolkit/src/styles/: index.css
src/db-toolkit/src/utils/: contextMenuActions.js  dropTable.js  erDiagramUtils-cardinality.js  erDiagramUtils.js  monacoCompletions.js  monacoHoverProvider.js  recentItemsTracker.js
src/db-toolkit/src/websockets/: useBackupWebSocket.js
src/db-toolkit/templates/email/: issue_report.html
src/db-toolkit/tests/: __init__.py  run_tests.py
src/db-toolkit/tests/integration/: test_api.py
src/db-toolkit/tests/unit/: test_cache.py  test_connection_manager.py  test_models.py  test_storage.py
src/db-toolkit/utils/: __init__.py  logger.py  pdf.py
src/db-toolkit/ws/: __init__.py  analytics.py  migrator.py  terminal.py
(+309 files in other folders)
