[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-toolkit"
version = "0.1.0"
description = "GUI Database Management Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
dbtoolkit = "dbtoolkit.gui.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]